--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="app_name">Zero1</string>
     <string name="action_settings">设置</string>
     <string name="hello_world">Hello world!</string>
-  	<string name="query">查询</string>
-  	<string name="action_add">添加</string>
-  	<string name="inf_user">帐户信息</string>
+    <string name="query">查询</string>
+    <string name="action_add">添加</string>
+    <string name="inf_user">帐户信息</string>
+    <string name="title_activity_init_activity_main">MainActivity</string>
+
 </resources>
