--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="action_add">添加</string>
     <string name="inf_user">帐户信息</string>
     <string name="title_activity_init_activity_main">MainActivity</string>
+    <string name="title_activity_trains_info">TrainsInfo</string>
 
 </resources>
