大提交，主要login 模块

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="action_previousday">上一天</string>
     <string name="title_activity_init_activity_main">MainActivity</string>
     <string name="title_activity_trains_info">TrainsInfo</string>
+    <string name="title_activity_login">LoginActivity</string>
 
 </resources>
