待同步后继续

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="title_activity_trains_info">TrainsInfo</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_profile">用户信息</string>
+    <string name="title_activity_book_view">BookViewActivity</string>
 
 </resources>
